--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
   background-color: rgb(11, 29, 38);
   background-image: url(https://fondosmil.com/fondo/26286.jpg);
-  background-position: center all;
+  background-position: center top;
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
