--- a/style.css
+++ b/style.css
@@ -54,6 +54,15 @@ ul {
   flex: 1;
   margin-left: 20px;
 }
+
+.menu-btn {
+  position: absolute;
+  cursor: pointer;
+  top: 15px;
+  right: 30px;
+  z-index: 2;
+}
+
 /* SHOWCASE */
 hr {
   margin: 10px 0;
@@ -62,7 +71,7 @@ hr {
   width: 100%;
   height: 550px;
   background: url("./img/showcase2.jpg") no-repeat center/cover;
-  padding-bottom: 50px;
+  padding: 50px;
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
@@ -160,4 +169,76 @@ hr {
 }
 .links a i {
   font-size: 3rem;
+}
+
+/* FOOTER LINKS */
+
+.footer-links {
+  background-color: #2f3640;
+  color: #616161;
+  font-size: 12px;
+  padding: 35px 0;
+}
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.footer-container ul {
+  margin: 0 auto;
+}
+
+.footer-container ul li {
+  line-height: 2.8;
+}
+.footer {
+  background: #2f3640;
+  color: #616161;
+  font-size: 12px;
+  padding: 20px 0;
+  text-align: center;
+  padding-bottom: 20px;
+}
+@media (max-width: 700px) {
+  .nav-main ul.nav-menu {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #2f3640;
+    height: 100%;
+    padding: 30px;
+    opacity: 0.9;
+    transform: translateX(-400px);
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .nav-main ul.nav-menu.show {
+    transform: translateX(-20px);
+  }
+
+  .nav-main ul.nav-menu li {
+    padding: 20px;
+    font-size: 14px;
+  }
+
+  .nav-main ul.nav-menu-right {
+    margin-right: 40px;
+  }
+
+  .news-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .cards-banner-one .content,
+  .cards-banner-two .content {
+    width: 80%;
+  }
+
+  .footer-links .footer-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
