--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ ul {
   flex: 1;
   margin-left: 20px;
 }
-
 .menu-btn {
   position: absolute;
   cursor: pointer;
@@ -62,7 +61,21 @@ ul {
   right: 30px;
   z-index: 2;
 }
-
+.nav-menu-right {
+  padding-right: 12px;
+}
+/* BUTTON SWITCH */
+.switch {
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 10px 0;
+  font-size: 20px;
+  border: 1px solid #fff;
+  border-radius: 10rem;
+  color: #ffffff;
+  background-color: transparent;
+}
 /* SHOWCASE */
 hr {
   margin: 10px 0;
@@ -241,4 +254,8 @@ hr {
   .footer-links .footer-container {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+.video-lahn {
+  margin: 20px;
+  padding: 10px;
 }
